# CINUX

./: CMakeLists.txt  README.md  grub.cfg
include/cpu/: idt.h  paging.h  tss.h
include/drivers/: ata.h  font.h  io.h  keyboard.h  mouse.h  pci.h  pic.h  power.h  terminal.h
include/fs/: fat32.h  procfs.h  vfs.h
include/kernel/: elf.h  exec.h  memory.h  multiboot.h  panic.h  task.h
include/lib/: libc.h  stddef.h  string.h
include/mm/: kmalloc.h
include/syscall/: syscall.h  syscall_raw.h
include/user/: user.h
src/cpu/: idt.c  irq.asm  isr.asm  paging.c
src/drivers/: ata.c  fb_terminal.c  font.c  keyboard.c  mouse.c  pic.c  power.c  rtc.c  terminal.c  timer.c
src/drivers/pci/: pci.c
src/fs/: fat32.c
src/kernel/: context_switch.asm  entry.asm  exec.c  kernel.c  link.ld  memory.c  panic.c  scheduler.c  task.c
src/lib/: libc.c  malloc.c
src/mm/: kmalloc.c
src/user/: syscall.c  user.c
userspace/: hello.c  init.c  link.ld
userspace/libc/include/: stdio.h  string.h  syscall.h  unistd.h
userspace/libc/src/: stdio.c  string.c  syscall.c
